--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
